--- a/_layouts/product-list.html
+++ b/_layouts/product-list.html
@@ -9,6 +9,14 @@ layout: default
     {% include product-icon.html product=product size=30 %}
     <a href="{{ product.permalink }}">{{ product.title }}</a>
   </h2>
+
+  <time datetime="{{ product.last_modified_at | date_to_xmlschema }}" class="fw-300">
+    📅 Last updated on {{ product.last_modified_at | date_to_long_string }}
+    {%- if page.auto %}
+    <span title="Latest releases on this page are automatically updated.">🤖</span>
+    {%- endif %}
+  </time>
+
   <div class="product-description">
     {{ product.content | extract_element:'blockquote' | first | extract_element:'p' }}
   </div>
